# CSAv1

./: .gitignore  README.md
csa_image_input/: setup.cfg  setup.py
csa_image_input/config/: image_input.yaml
csa_image_input/csa_image_input/: image_publisher_node.py
csa_interfaces/: CMakeLists.txt  package.xml
csa_interfaces/msg/: TrackedObject.msg  TrackedObjectArray.msg
csa_launch/: CMakeLists.txt
csa_launch/launch/: csa_stage1.launch.py
csa_semantic_mapper/config/: semantic_mapper.yaml
csa_semantic_mapper/csa_semantic_mapper/: scene_graph_builder.py  semantic_mapper_node.py  semantic_memory.py
csa_slam_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
csa_slam_interface/csa_slam_interface/: slam_pose_node.py
csa_slam_interface/include/csa_slam_interface/: slam_pose_node.hpp
csa_slam_interface/src/: slam_pose_node.cpp
csa_utils/: CMakeLists.txt  package.xml  setup.py
csa_utils/csa_utils/: coordinate_transform.py  input_handler.py  log.py  time_sync.py  visualization.py
csa_yolo_inference/: package.xml  setup.cfg  setup.py
csa_yolo_inference/csa_yolo_inference/: strongsort_tracker.py  yolo_tracker_node.py  yolov5_wrapper.py
src/: check_csa_env.sh  enter_ros2_venv.sh
src/csa_image_input/: package.xml
src/csa_image_input/csa_image_input/: image_publisher_node.py
src/csa_interfaces/: setup.cfg
src/csa_launch/: package.xml
src/csa_launch/launch/: csa_stage1.launch.py
src/csa_semantic_mapper/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/csa_semantic_mapper/csa_semantic_mapper/: semantic_mapper_node.py
src/csa_utils/: setup.cfg
src/csa_utils/csa_utils/: config_utils.py  id_manager.py  log.py  pose_parser.py  serialization.py
src/csa_utils/csa_utils/rules/: base_rule.py  default_rules.py  rule_manager.py  rule_utils.py  semanticobject.py
src/csa_yolo_inference/: CMakeLists.txt  infer_core.py  package.xml  setup.py
src/csa_yolo_inference/config/: global_parameters.yaml
src/csa_yolo_inference/csa_yolo_inference/: config_loader.py  yolo_tracker_node.py
