<package format="3">
  <name>csa_image_input</name>
  <version>0.0.0</version>
  <description>Image publishing node for CSA</description>
  <maintainer email="jack@example.com">jack</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>csa_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
