<?xml version="1.0"?>
<package format="3">
  <name>csa_launch</name>
  <version>0.1.0</version>
  <description>Launch files for CSA</description>

  <maintainer email="jack@domain.com">Jack</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>

</package>
