<?xml version="1.0"?>
<package format="3">
  <!-- íŒ¨í‚¤ì§€ ê¸°ë³¸ ì •ë³´ -->
  <name>csa_semantic_mapper</name>
  <version>0.1.0</version>
  <description>
    CSA Stage 1 Semantic Mapper Node:
    Converts TrackedObject and Pose data into 3D semantic coordinates,
    manages semantic memory, and builds object-level Scene Graphs.
  </description>

  <!-- ìœ ì§€ë³´ìˆ˜ ì •ë³´ -->
  <maintainer email="jack@jacklab.org">jack</maintainer>
  <license>MIT</license>

  <!-- ë¹Œë“œ ì‹œìŠ¤í…œ -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- í•„ìˆ˜ ì‹¤í–‰ ì¢…ì†ì„± (CSA ì‹œìŠ¤í…œ ë©”ì‹œì§€ ë° ROS2 ë©”ì‹œì§€ íƒ€ìž…) -->
  <exec_depend>csa_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>csa_interfaces</exec_depend>  <!-- ðŸš¨ CSA ë©”ì‹œì§€ ì •ì˜ íŒ¨í‚¤ì§€ -->

  <!-- ì•Œê³ ë¦¬ì¦˜/ì²˜ë¦¬ìš© Python ë¼ì´ë¸ŒëŸ¬ë¦¬ -->
  <exec_depend>numpy</exec_depend>
  <exec_depend>PyYAML</exec_depend>

  <!-- ì„ íƒì : Neo4j ì €ìž¥ ê¸°ëŠ¥ êµ¬í˜„ ì‹œ (í–¥í›„ í™•ìž¥ ê³ ë ¤) -->
  <!-- <exec_depend>neo4j</exec_depend> -->

  <!-- í…ŒìŠ¤íŠ¸ ê´€ë ¨ -->
  <test_depend>pytest</test_depend>

  <!-- íŒ¨í‚¤ì§€ ë“±ë¡ (í•„ìˆ˜) -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
